@@ -301,11 +301,11 @@ $(OS)\HtmlFormatter.obj: $B\src\utils\HtmlParserLookup.h $B\src\utils\HtmlPullPa
 $(OS)\HtmlFormatter.obj: $B\src\utils\Sigslot.h $B\src\utils\StrUtil.h $B\src\utils\Timer.h
 $(OS)\HtmlFormatter.obj: $B\src\utils\Vec.h
 $(OS)\ImagesEngine.obj: $B\src\BaseEngine.h $B\src\ImagesEngine.h $B\src\PdfCreator.h
-$(OS)\ImagesEngine.obj: $B\src\utils\Allocator.h $B\src\utils\BaseUtil.h $B\src\utils\FileUtil.h
-$(OS)\ImagesEngine.obj: $B\src\utils\GdiPlusUtil.h $B\src\utils\GeomUtil.h $B\src\utils\HtmlPullParser.h
-$(OS)\ImagesEngine.obj: $B\src\utils\JsonParser.h $B\src\utils\RarUtil.h $B\src\utils\Scoped.h
-$(OS)\ImagesEngine.obj: $B\src\utils\StrUtil.h $B\src\utils\Vec.h $B\src\utils\WinUtil.h
-$(OS)\ImagesEngine.obj: $B\src\utils\ZipUtil.h
+$(OS)\ImagesEngine.obj: $B\src\utils\7zUtil.h $B\src\utils\Allocator.h $B\src\utils\BaseUtil.h
+$(OS)\ImagesEngine.obj: $B\src\utils\FileUtil.h $B\src\utils\GdiPlusUtil.h $B\src\utils\GeomUtil.h
+$(OS)\ImagesEngine.obj: $B\src\utils\HtmlPullParser.h $B\src\utils\JsonParser.h $B\src\utils\RarUtil.h
+$(OS)\ImagesEngine.obj: $B\src\utils\Scoped.h $B\src\utils\StrUtil.h $B\src\utils\Vec.h
+$(OS)\ImagesEngine.obj: $B\src\utils\WinUtil.h $B\src\utils\ZipUtil.h
 $(OS)\Install.obj: $B\src\BaseEngine.h $B\src\ifilter\PdfFilter.h $B\src\installer\Installer.h
 $(OS)\Install.obj: $B\src\installer\Resource.h $B\src\previewer\PdfPreview.h $B\src\Translations.h
 $(OS)\Install.obj: $B\src\utils\ByteOrderDecoder.h $B\src\utils\FileTransactions.h $B\src\utils\FileUtil.h
@@ -619,6 +619,9 @@ $(OS)\WindowInfo.obj: $B\src\utils\Allocator.h $B\src\utils\BaseUtil.h $B\src\ut
 $(OS)\WindowInfo.obj: $B\src\utils\FrameRateWnd.h $B\src\utils\GeomUtil.h $B\src\utils\Scoped.h
 $(OS)\WindowInfo.obj: $B\src\utils\SettingsUtil.h $B\src\utils\Sigslot.h $B\src\utils\StrUtil.h
 $(OS)\WindowInfo.obj: $B\src\utils\Vec.h $B\src\utils\WinUtil.h $B\src\WindowInfo.h
+$(OU)\7zUtil.obj: $B\ext\unarr\unarr.h $B\src\utils\7zUtil.h $B\src\utils\Allocator.h
+$(OU)\7zUtil.obj: $B\src\utils\BaseUtil.h $B\src\utils\GeomUtil.h $B\src\utils\Scoped.h
+$(OU)\7zUtil.obj: $B\src\utils\StrUtil.h $B\src\utils\Vec.h
 $(OU)\BaseUtil.obj: $B\src\utils\Allocator.h $B\src\utils\BaseUtil.h $B\src\utils\GeomUtil.h
 $(OU)\BaseUtil.obj: $B\src\utils\Scoped.h $B\src\utils\StrUtil.h $B\src\utils\Vec.h
 $(OU)\BitReader.obj: $B\src\utils\Allocator.h $B\src\utils\BaseUtil.h $B\src\utils\BitReader.h
