@@ -844,6 +844,7 @@ EXPORTS
 	ar_get_global_comment
 	ar_open_rar_archive
 	ar_open_zip_archive
+	ar_open_7z_archive
 
 ; djvu exports (required for DjVuEngine)
 
